Translate (i18n) implementation: WIP Fixes to footer and menu overlap

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -375,21 +375,23 @@ div.tl-edges {
 }
 
 .footer-title{
-  font-size: calc(10px + 0.8vw) !important;
+  font-size: calc(min(10px + 0.8vw, 30px)) !important;
 }
 
 .footer-links {
-  font-size: calc(8px + 0.5vw) !important;
+  font-size: calc(min(8px + 0.5vw, 25px)) !important;
 }
 
 .border-footer {
   padding-right: 10px !important;
-  padding-top: 50px !important;
-  padding-bottom: 10px !important;
+  // padding-top: 50px !important;
+  // padding-bottom: 10px !important;
+  padding-top: calc(10px + 0.1vw) !important;
+  padding-bottom: calc(10px + 0.1vw) !important;
   border-right: solid 2px ;
-  max-height: 20px !important;
-  margin-top: 30px !important;
-  margin-bottom: 30px !important;
+  // max-height: 20px !important;
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
 }
 
 .bg-gradient-section {
